Simplify track file

--- a/video_download/youtube-dl.conf
+++ b/video_download/youtube-dl.conf
@@ -4,7 +4,7 @@
 
 # Filename
 --restrict-filenames
---output "raw/%(id)s/%(id)s.%(ext)s"
+--output "downloads/%(ext)s/%(id)s.%(ext)s"
 
 # Format
 --merge-output-format "mp4"
