Update recode_videos for new storage

--- a/video_download/youtube-dl.conf
+++ b/video_download/youtube-dl.conf
@@ -4,7 +4,7 @@
 
 # Filename
 --restrict-filenames
---output "downloads/%(ext)s/%(id)s.%(ext)s"
+--output "downloads/%(id)s/original.%(ext)s"
 
 # Format
 --merge-output-format "mp4"
@@ -25,5 +25,4 @@
 
 # Postprocessor
 --prefer-ffmpeg
-# --exec "scenedetect -i {} detect-content split-video -f \"$VIDEO_NAME/scene-$SCENE_NUMBER\" -o video -q --high-quality"
-# --exec "scenedetect -i {} detect-content list-scenes -f \"$VIDEO_NAME/scenes.csv\" -o video -q -s"
+# --exec "ffmpeg -i {} -v quiet -map 0:a -acodec pcm_s16le -ac 1 -ar 16000 audio.wav -map 0:v -vcodec h264 -filter:v fps=30 video.mp4"
