--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,8 @@ dependencies:
   - notebook=6.4
   - scipy=1.7
   - pandas=1.3
+  - hdf5=1.10
+  - pytables=3.5
   - pip=20.3
   - pip:
       - youtube-dl
